<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:scrollbars="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="5dp" 
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@drawable/icon_login"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv__user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/tv_user_name"
                android:textSize="@dimen/text_size_20dp" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="3"
                android:hint="@string/et_user_name"
                android:textSize="@dimen/text_size_20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_user_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/tv_user_password"
                android:textSize="@dimen/text_size_20dp" />

            <EditText
                android:id="@+id/et_user_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="3"
                android:hint="@string/et_user_password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_task_btn_accept"
                android:text="@string/btn_login"
                android:textColor="@color/bai_se"
                android:textSize="@dimen/text_size_20dp" 
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <Button
                android:id="@+id/enroll_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_task_btn_accept"
                android:text="@string/enroll_login"
                android:textColor="@color/bai_se"
                android:textSize="@dimen/text_size_20dp" 
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
          <TextView 
            android:id="@+id/forget_pwd_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/forget_pwd"/>
    </LinearLayout>

</ScrollView>